--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </p>
 
         <h2>Meet Our Team</h2>
-        <img src="../media/group-photo.jpg" alt="Our (MY) Advocacy Group">
+        <img src="group-photo.jpg" alt="Our (MY) Advocacy Group">
         <p>
             I am a dedicated student-led advocacy team passionate about justice reform. 
             
@@ -56,4 +56,5 @@
     </footer>
 </body>
 </html>
+
 
