--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <img src="../media/logo.png" alt="Logo" width="100">
+        <img src="logo.png" alt="Logo" width="100">
         <h1>Criminal Liability Advocacy</h1>
     </header>
 
@@ -61,7 +61,7 @@
             and to push for responsible reforms that balance justice with rehabilitation for youth offenders.
         </p>
 
-        <img src="../media/justice.jpg" alt="Justice">
+        <img src="justice.jpg" alt="Justice">
         
 
         <h2>Call to Action</h2>
@@ -75,3 +75,4 @@
     </footer>
 </body>
 </html>
+
